--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <title>PRO TEST</title>
+    <title>PRO TEST EJNOY MY DEPLOY</title>
   </head>
   <body>
     <div id="root"></div>
